# ergocub-bimanual

./: CMakeLists.txt  README.md  start_client.sh  start_server.sh  start_server_docker.sh  stop.sh
config/: ergocub.ini  ergocub_gazebo_sim.ini  ergocub_real.ini
config/default/: cartesian_actions.ini
config/ergocub/: control_parameters.ini
config/ergocub_real_params/: cartesian_actions.ini  control_parameters.ini  grasp_actions.ini  joint_space_actions.ini
config/gazebo_sim/: cartesian_actions.ini  control_parameters.ini  grasp_actions.ini  joint_space_actions.ini
config/real_robot/: control_parameters.ini  grasp_actions.ini  joint_space_actions.ini
gazebo/worlds/: ergocub_nav_test.sdf  ergocub_test.sdf
gazebo/worlds/long_stick/: long_stick.urdf  model.config
gazebo/worlds/long_stick/conf/: linkattacher.ini
include/: BimanualControl.h  MotorControl.h  Utilities.h
interface/: CMakeLists.txt  ControlInterface.thrift
src/: BimanualControl.cpp  CommandPrompt.cpp  CommandServer.cpp  ControlServer.cpp  ForceControl.cpp  MotorControl.cpp
